[package]
name = "concert_connect_server"
version = "0.1.0"
edition = "2021"

[dependencies]
datetime = "0.5.2"
anyhow = {version = "1", features=["backtrace"]}
scylla = "0.13.0"
serde = "1.0"
serde-this-or-that = "0.4.2"
config = "0.14.0"
tokio = "1.37.0"
struct_iterable = "0.1.1"
uuid = "1.8.0"
quote = "1.0.36"
syn = "2.0.60"
proc-macro2 = "1.0"
fake = "2.9.2"
claims = "0.7.1"
chrono = "0.4.38"