[package]
name = "concert_connect_server"
version = "0.1.0"
edition = "2021"

[dependencies]
datetime = "0.5.2"
anyhow = {version = "1", features=["backtrace"]}
scylla = "0.13.0"
serde = "1.0"
serde-this-or-that = "0.4.2"
config = "0.14.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
struct_iterable = "0.1.1"
uuid = { version = "1.8.0", features = ["serde"] }
quote = "1.0.36"
syn = "2.0.60"
proc-macro2 = "1.0"
fake = "2.9.2"
claims = "0.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
actix-web = "4"
serde_json = "1.0.116"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
image = "0.25.1"
base64 = "0.22.1"
rand = "0.8.5"
validator = "0.18.1"
unicode-segmentation = "1.11.0"
once_cell = "1.19.0"
thiserror = "1.0.59"


[dependencies.reqwest]
version = "0.12.4"
default-features = false
features = ["json", "rustls-tls"]


[dev-dependencies]
wiremock = "0.6.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"